<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityRegistrarLugar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="10dp">

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agregar_un_nuevo_lugar_turistico"
            android:textColor="@color/texto_negro"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="18sp"/>


        <ImageView
            android:id="@+id/imageView_AgregarImagenes_Registrar"
            android:layout_width="wrap_content"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:src="@drawable/nueva_imagen"/>

        <EditText
            android:id="@+id/editText_NombreLugar_Registrarse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margenEditTex"
            android:ems="10"
            android:hint="@string/nombreLugar"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextComarca_Registarse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margenEditTex"
            android:ems="10"
            android:hint="@string/comarca"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextHorarios_Registrarse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/horarios"
            android:layout_marginVertical="@dimen/margenEditTex"
            android:ems="10"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextDireccion_Registrarse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/direccion"
            android:layout_marginVertical="@dimen/margenEditTex"
            android:ems="10"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextTelefono_Registrase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono"
            android:layout_marginVertical="@dimen/margenEditTex"
            android:ems="10"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/editTextDesccripcion_Registrarse"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginVertical="@dimen/margenEditTex"
            android:ems="10"
            android:hint="@string/descripci_n"
            android:inputType="textMultiLine" />

        <Spinner
            android:id="@+id/spinnerCategorias_Registrase"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="10dp"
            android:text="@string/agregar_nuevo_lugar"
            android:onClick="Crear"
            android:textSize="18dp"/>

    </LinearLayout>

</ScrollView>