<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="25dp"
    app:cardElevation="4dp"
    android:backgroundTint="#D8FFFFFF"
    android:padding="5dp"
    app:cardUseCompatPadding="true">

<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginVertical="10dp">

    <ImageView
        android:id="@+id/imageViewLugar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/imagen_ini"
        android:padding="10dp"
        />

    <TextView
        android:id="@+id/textViewLugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/texto_negro"
        android:text="@string/lugar"
        />

    <TextView
        android:id="@+id/textViewComarca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/texto_negro"
        android:textSize="16sp"
        android:gravity="center"
        android:text="@string/comarca"/>

</LinearLayout>
</androidx.cardview.widget.CardView>