<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityAgregarUsuario">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crea_tu_usuario_facil_y_rapido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:gravity="center"
        android:padding="20dp">

        <EditText
            android:id="@+id/editTextTextNombreAgregarUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_marginVertical="5dp"
            android:hint="Nombre"
            android:gravity="center"
            android:maxLength="30"/>

        <EditText
            android:id="@+id/editTextTextUsernameAgregarUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:layout_marginVertical="5dp"
            android:hint="@string/nombre_usuario"
            android:gravity="center"
            android:maxLength="10"/>

        <EditText
            android:id="@+id/editTextTextPasswordAgrergarUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_marginVertical="5dp"
            android:hint="@string/contrasena"
            android:gravity="center"
            android:maxLength="20"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrase"
            android:onClick="AgregarUsuario"
            android:layout_marginVertical="10dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>