<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.LugarInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView_infoLugares"
            android:layout_width="match_parent"
            android:layout_height="350dp"/>


        <TextView
            android:id="@+id/textView_infoLugar_Nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/nombre"
            android:layout_marginVertical="4dp"
            android:gravity="center"
            android:textColor="@color/texto_negro"
            android:textStyle="bold"
            android:layout_marginHorizontal="10dp"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="2dp">
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/texto_negro"
            android:text="@string/telefono"
            android:textSize="14sp"/>

            <TextView
                android:id="@+id/textView_infoLugar_telefono"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:text="@string/telefono"
                android:textColor="@color/texto_negro"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/direccion"
                android:textColor="@color/texto_negro"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/textView_Direccion_fragmentInfoLugar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/direccion"
                android:textSize="16sp"
                android:textColor="@color/texto_negro"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/texto_negro"
                android:textSize="14sp"
                android:text="@string/horarios"/>

            <TextView
                android:id="@+id/textView_Horarios_fragmentInfoLugar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:textColor="@color/texto_negro"
                android:textStyle="bold"
                android:text="@string/horarios"
                android:layout_marginLeft="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="2dp">

            <TextView
                android:layout_marginTop="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descripci_n"
                android:textColor="@color/texto_negro"
                android:textSize="14sp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/textView_Descripcion_fragmnetInfoLugar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:text="@string/descripci_n"
            android:textColor="@color/texto_negro"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </LinearLayout>

</ScrollView>
